--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,9 @@
-html body {
+html,
+body {
   height: 100%;
   margin: 0;
   padding: 0;
   font-family: 'Josefin Slab', serif;
-}
-html {
-  height: 100%;
 }
 .react-root {
   height: 100%;
