--- a/client/src/components/App/styles.css
+++ b/client/src/components/App/styles.css
@@ -7,3 +7,91 @@
   color: white;
   text-decoration: line-through;
 }
+
+.text-center {
+  width: 30%;
+  position: fixed;
+  top: 30%;
+  left: 30%;
+}
+.margin {
+  margin: 100px;
+}
+.task {
+  font-size: larger;
+  padding-left: 20px;
+  height: 30px;
+  margin-bottom: 2px;
+  padding-top: 15px;
+  width: 30%;
+}
+.task_new {
+  background: antiquewhite;
+}
+.task_done {
+  background-color: antiquewhite;
+  opacity: .5;
+  color: white;
+  text-decoration: line-through;
+}
+.button-come {
+  float: right;
+  background: none;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+.home-input {
+  font-size: medium;
+  resize: none;
+  font-family: 'Josefin Slab', serif;
+}
+.centered {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -50px;
+  margin-left: -100px;
+}
+.centered1 {
+  width: 100%;
+  position: fixed;
+  top: 55%;
+  left: 50%;
+  margin-top: -50px;
+  margin-left: -100px;
+}
+.header-wrapper {
+  background-color: #44a1d6;
+  opacity: 0.7;
+  height: 65px;
+  display: flex;
+  justify-content: space-around;
+  position: fixed;
+  width: 100%;
+  top: 0px;
+}
+.header-menu {
+  display: flex;
+  width: 250px;
+  justify-content: space-between;
+}
+.header-logo {
+  height: 55px;
+  margin-top: 5px;
+}
+.header-link {
+  background: transparent;
+  font-family: 'Josefin Slab', serif;
+  border: none;
+  color: white;
+  margin-top: 15px;
+  font-size: 35px;
+  outline: none;
+  cursor: pointer;
+  text-decoration: none;
+}
+.logo {
+  font-size: 35px;
+  margin-bottom: 10px;
+}
