--- a/client/src/components/App/styles.css
+++ b/client/src/components/App/styles.css
@@ -19,14 +19,15 @@
 }
 .task {
   font-size: larger;
-  padding-left: 20px;
-  height: 30px;
+  padding-left: 15px;
+  height: 50px;
   margin-bottom: 2px;
-  padding-top: 15px;
+  padding-top: 10px;
   width: 30%;
 }
 .task_new {
   background: antiquewhite;
+  margin-top: 5px;
 }
 .task_done {
   background-color: antiquewhite;
@@ -35,11 +36,10 @@
   text-decoration: line-through;
 }
 .button-come {
+  background-color: black;
+  color: white;
+  border-radius: 50%;
   float: right;
-  background: none;
-  border: none;
-  outline: none;
-  cursor: pointer;
 }
 .home-input {
   font-size: medium;
@@ -52,6 +52,7 @@
   left: 50%;
   margin-top: -50px;
   margin-left: -100px;
+  display: flex;
 }
 .centered1 {
   width: 100%;
@@ -71,6 +72,11 @@
   width: 100%;
   top: 0px;
 }
+.logout {
+  float: right;
+  margin-right: 5px;
+  cursor: pointer;
+}
 .header-menu {
   justify-content: center;
   height: 50px;
@@ -87,4 +93,10 @@
 .logo {
   font-size: 35px;
   margin-bottom: 10px;
+}
+.tasks {
+  margin-left: 15px;
+  background: transparent;
+  border: none;
+  width: 100px;
 }
