--- a/client/src/components/App/styles.css
+++ b/client/src/components/App/styles.css
@@ -116,3 +116,17 @@
   border-color: #839dbb;
   width: 100px;
 }
+.className {
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #839dbb;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid;
+  border-radius: 4px;
+  border-color: red;
+}
