--- a/client/src/components/App/styles.css
+++ b/client/src/components/App/styles.css
@@ -130,3 +130,46 @@
   border-radius: 4px;
   border-color: red;
 }
+.closeButton {
+  width: 27px;
+  background-color: black;
+  color: white;
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  border-radius: 50%;
+  height: 27px;
+}
+.forget {
+  cursor: pointer;
+}
+.check {
+  position: relative;
+  height: 100%;
+}
+.btn {
+  background-color: #839dbb;
+}
+.etc-login-form {
+  margin-top: 10px;
+}
+.modal {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, .65);
+}
+.modal-content {
+  height: 250px;
+  text-align: center;
+  width: 350px;
+  border: 1px solid gray;
+  background-color: #f8f9fa;
+}
