--- a/client/src/components/App/styles.css
+++ b/client/src/components/App/styles.css
@@ -177,3 +177,10 @@
   margin-top:10px;
   color: red;
 }
+.confirm {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -25px;
+  margin-left: -110px;
+}
